small margin fix for logo on mobile

--- a/staticapp/static/css/custom.css
+++ b/staticapp/static/css/custom.css
@@ -22,13 +22,15 @@ body {
     overflow:hidden;
 }
 
-@media query {
+/* @media query { */
   .navbar-header span {
     /* margin: 0 0px 0 0; */
     display: inline-block;
-    margin-left: 2.5px
+    margin-left: 2.5px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
-}
+/* } */
 
 .navbar-toggle {
     z-index:3;
